# squad-mortar-helper

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  BUILDING.md  Cargo.toml  README.md  build.rs  clippy.toml
.github/workflows/: build.yml
heightmap-ripper/: Cargo.toml  build.rs
heightmap-ripper/src/: lib.rs
lib/include/tesseract/: version.h
src/: capture.rs  main.rs  settings.rs
src/squadex/: milliradians.rs  mod.rs
src/squadex/capture/: fallback.rs  mod.rs  windows.rs
src/squadex/heightmaps/: mod.rs  serde.rs
src/squadex/window/: fallback.rs  mod.rs  windows.rs
src/ui/: about.rs  clipboard.rs  debug.rs  draw.rs  fmt.rs  heightmaps.rs  imgui.rs  logs.rs  map.rs  markers.rs  mod.rs  rotate.rs  settings.rs  state.rs  theme.rs  update.rs  web.rs  window.rs
src/ui/fonts/: mod.rs
src/vision/: find_minimap.rs  hardware.rs  mod.rs  mpx_ratio.rs  penetrate_blips.rs
toml-consts/: Cargo.toml
toml-consts/src/: lib.rs
util/: Cargo.toml
util/src/: cell.rs  debug.rs  geometry.rs  image.rs  lib.rs  maths.rs  parallel.rs  smallvec.rs  str.rs  sus.rs
vision-common/: Cargo.toml  build.rs
vision-common/src/: debug.rs  dylib.rs  lib.rs  lsd.rs  screen.rs
vision-common/src/consts/: .gitignore  consts.toml  mod.rs
vision-common/src/markers/: mod.rs
vision-common/src/markers/resources/: corners.tga  map_commandmarker_squad_attack.TGA  map_commandmarker_squad_build.TGA  map_commandmarker_squad_defend.TGA  map_commandmarker_squad_move.TGA  map_commandmarker_squad_observe.TGA
vision-common/src/markers/resources/raw/: map_commandmarker_squad_attack.TGA  map_commandmarker_squad_build.TGA  map_commandmarker_squad_defend.TGA  map_commandmarker_squad_move.TGA  map_commandmarker_squad_observe.TGA
vision-cpu/: Cargo.toml
vision-cpu/src/: lib.rs
vision-gpu/: Cargo.toml  build.rs
vision-gpu/cuda/: .gitignore  cuda.cu  cuda_release.ptx  cuda_release_35.ptx  cuda_release_52.ptx  cuda_release_61.ptx  cuda_release_75.ptx  cuda_release_86.ptx  dilate.cpp  dilate.h
vision-gpu/src/: cuda.rs  gpuimage.rs  gpumarkers.rs  lib.rs
vision-ocr/: Cargo.toml  build.rs
vision-ocr/src/: lib.rs  ocr.cpp  ocr.hpp
web/: Cargo.toml
web/src/: html.rs  http.rs  lib.rs  ws.rs
web/www/: ctl.js  index.html  map.js  squadex.js  style.css  ws.js
