[package]
name = "squad-mortar-helper"
version = "0.2.2"
edition = "2021"
authors = ["William Venner <william@venner.io>"]
publish = false

[workspace]
members = [
	"vision-common",
	"vision-gpu",
	"vision-cpu",
	"vision-ocr",
	"heightmap-ripper",
	"web",
	"util"
]

[[bin]]
path = "src/main.rs"
name = "smh"

[features]
default = ["gpu"]
gpu = ["smh-vision-gpu"]
gpu-ptx-vendored = ["smh-vision-gpu/gpu-ptx-vendored"]
force-gpu-debug = ["smh-vision-gpu/force-gpu-debug"]
force-gpu-ptx-optimised = ["smh-vision-gpu/force-gpu-ptx-optimised"]

[profile.release]
strip = true
codegen-units = 1
lto = "thin"

[dependencies]
smh-util = { path = "util" }
smh-vision-common = { path = "vision-common" }
smh-vision-cpu = { path = "vision-cpu" }
smh-vision-ocr = { path = "vision-ocr" }
smh-heightmap-ripper = { path = "heightmap-ripper" }
smh-web = { path = "web" }

backtrace = "0"
ctrlc = "3"
scrap = "0"
crc32fast = "1"
magic_static = "3"
thiserror = "1"
lazy_static = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

xz2 = { git = "https://github.com/alexcrichton/xz2-rs.git", features = ["static"], rev = "949294ec" }

# UI
glium = "0.30"
imgui = "0"
imgui-glium-renderer = "0"
imgui-winit-support = "0"
winit = "0.25"
clipboard = "0"
build-time = "0"
bumpalo = { version = "3", features = ["collections"] }
walkdir = "2"

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
msgbox = "0"

[target.'cfg(all(any(windows, target_os = "linux"), target_arch = "x86_64"))'.dependencies]
smh-vision-gpu = { path = "vision-gpu", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0"

[build-dependencies]
build_cfg = "1"