[package]
name = "smh-heightmap-ripper"
version = "0.1.0"
edition = "2021"
authors = ["William Venner <william@venner.io>"]
publish = false

[dependencies]
thiserror = "1"
image = { version = "0.23", default-features = false, features = ["png", "jpeg", "ico"] }
log = "0"
steamlocate = "1"
byteorder = "1"

[target.'cfg(windows)'.dependencies]
winapi = "0.3"

[build-dependencies]
build_cfg = "1"

[dev-dependencies]
open = "2"