[package]
name = "smh-vision-common"
version = "0.1.0"
edition = "2021"
authors = ["William Venner <william@venner.io>"]
publish = false

[dependencies]
smh-util = { path = "../util" }
smh-vision-ocr = { path = "../vision-ocr" }
libloading = "0"
backtrace = "0"
log = "0"

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
msgbox = "0"

[build-dependencies]
toml-consts = { path = "../toml-consts" }